# mydevpath-playground

./: devops-dsa-study-plan.md
_docs/: pokemon-tracker-webapp-links.md  pokemon-tracker-webapp-list.md  pokemon-tracker-webapp-sonnet.md
aws-devops/policies/devops-group/: devops-admin-policy.json  devops-developer-policy.json  devops-readonly-policy.json
aws-devops/policies/docs/: IAM-policies.md
aws-devops/policies/docs/001-IAM-and-policies/: IAM-policies.md
aws-devops/policies/docs/002-EC2/: EC2-Fundamentals.md
task-management-api/services/user-service/: .env.example  pyproject.toml
